--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         <li class="portfolio-btn-items"><button type="button" class="portfolio-btn">Маркетинг</button></li>
       </ul>
     </div>
-<section class=".section-portfolio section">
+<section class=" section-portfolio  ">
 <div class="container">
   <ul class="project-list">
     
